youtube.css
.hide-comments {
  height: 0px;
  overflow: hidden;
  padding: 0 !important; /* this padding for oldYouTube */
}

.is-hide {
  display: none
}

.fake-paper-button {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
  min-width: 5.14em;
  margin-left: 1em;
  background: transparent;
  text-align: center;
  font: inherit;
  text-transform: uppercase;
  outline-width: 0;
  border-radius: 3px;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  user-select: none;
  cursor: pointer;
  z-index: 0;
  padding: 0;
  background-color: var(--paper-button_-_background-color);
  border: var(--paper-button_-_border);
  color: var(--paper-button_-_color);
  width: var(--paper-button_-_width);
  text-transform: var(--paper-button_-_text-transform, uppercase);
}

.fake-yt-formatted-string {
  color: var(--yt-expand-color);
  display: inline-block;
  margin-top: 8px;
  font-size: 1.3rem;
  font-weight: 500;
  letter-spacing: 0.007px;
  text-transform: uppercase;
}

